QIconLoaderEngine: use scaledPixmap() to properly pass dpr

QIconLoaderEngine::paint() was still using QIconLoader::pixmap() to
retrieve the pixmap for painting instead QIconLoader::scaledPixmap()
which takes the devicePixelRatio as additional parameter. In the case
of icon themes this could pick up the wrong pixmap (from the wrong
folder).

Pick-to: 6.8
Fixes: QTBUG-135159
Change-Id: I69ceada35f36c64675c4147cf284a180a4c69915
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit c5c6df40bee57cc28427d36b4c7c6860ae14b722)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>